# SAT

./: .gitignore  CMakeLists.txt  Makefile  README.md  analysis_report.json  analysis_report.txt  cppcheck_report.xml  flawfinder_report.txt  gcc_analyzer_report.txt  install.ps1  install.sh
build-release/: CMakeCache.txt  Makefile  analyzer  cmake_install.cmake
docs/: TOOLS.md  architecture.md  design.md  install.md  security.md
include/common/: logging.h  types.h  utils.h
include/core/: correlation.h  database.h  findings.h  scoring.h
include/gui/: controller.h  model.h  ui.h
include/parser/: coverity_parser.h  cppcheck_parser.h  flawfinder_parser.h  gcc_parser.h  parser.h
include/report/: json.h  report.h
include/runner/: converity.h  cppcheck.h  flawfinder.h  gcc.h  runner.h
orchestrator/: main.c  runner.c  runner.h
src/: Makefile  main.c  runner.c  runner.h  tool_finder.c  tool_finder.h
src/common/: logging.c  utils.c
src/core/: correlation.c  database.c  findings.c  scoring.c
src/gui/: controller.c  main.c  model.c  ui.c
src/parser/: coverity_parser.c  cppcheck_parser.c  flawfinder_parser.c  gcc_parser.c  parser.c
src/report/: json.c  report.c
src/runner/: coverity.c  cppcheck.c  flawfinder.c  gcc.c  runner.c
tests/: test.c
